<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jamonapi</groupId>
    <artifactId>jamon-parent-3.0</artifactId>
    <version>3.0</version>
    <packaging>pom</packaging>
    
    <name>JAMon 3.0 Parent</name>
    <description>JAMon (Java Application Monitor) 3.0 - Modular Architecture</description>
    <url>https://github.com/stevensouza/jamonapi</url>

    <licenses>
        <license>
            <name>BSD 3-Clause License</name>
            <url>https://github.com/stevensouza/jamonapi/blob/master/docs/LICENSE.md</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>stevensouza</id>
            <name>Steve Souza</name>
            <email>admin@jamonapi.com</email>
            <url>https://github.com/stevensouza</url>
            <roles>
                <role>creator</role>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/stevensouza/jamonapi.git</connection>
        <developerConnection>scm:git:ssh://github.com:stevensouza/jamonapi.git</developerConnection>
        <url>https://github.com/stevensouza/jamonapi</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>central</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>central</id>
            <url>https://central.sonatype.com/</url>
        </repository>
    </distributionManagement>

    <modules>
        <module>jamon-core</module>
        <module>jamon-http-jakarta</module>
        <module>jamon-hazelcast</module>
        <!-- <module>jamon-jetty</module> --> <!-- Jetty 12 support planned for future release -->
        <module>jamon-tomcat</module>
    </modules>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Plugin versions -->
        <maven.compiler.plugin.version>3.14.1</maven.compiler.plugin.version>
        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
        <maven.javadoc.plugin.version>3.10.1</maven.javadoc.plugin.version>
        <maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>
        
        <!-- Core dependency versions -->
        <junit.version>4.13.2</junit.version>
        <mockito.version>5.21.0</mockito.version>
        <assertj.version>3.27.7</assertj.version>
        <commons.version>3.18.0</commons.version>
        <log4j.version>2.25.3</log4j.version>
        
        <!-- Java 8 compatible versions -->
        <servlet.version>3.1.0</servlet.version>
        <jsp.version>2.3.3</jsp.version>
        
        <!-- Java 17+ versions -->
        <servlet.jakarta.version>6.0.0</servlet.jakarta.version>
        <hazelcast.version>5.5.0</hazelcast.version>
        <jetty.version>12.0.15</jetty.version>
        <tomcat.version>11.0.18</tomcat.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
                
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven.javadoc.plugin.version}</version>
                    <configuration>
                        <skip>true</skip>
                        <additionalparam>-Xdoclint:none</additionalparam>
                    </configuration>
                </plugin>
                
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <argLine>
                            --add-modules java.se
                            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                            --add-opens java.base/java.lang=ALL-UNNAMED
                            --add-opens java.base/java.nio=ALL-UNNAMED
                            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                            --add-opens java.management/sun.management=ALL-UNNAMED
                            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                            --add-opens java.base/java.util=ALL-UNNAMED
                            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <!-- Java 17+ profile for modern modules -->
        <profile>
            <id>java17-modules</id>
            <activation>
                <jdk>[17,)</jdk>
            </activation>
            <properties>
                <maven.compiler.source>17</maven.compiler.source>
                <maven.compiler.target>17</maven.compiler.target>
            </properties>
        </profile>

        <!-- Release profile for Maven Central deployment -->
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven.source.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven.javadoc.plugin.version}</version>
                        <configuration>
                            <skip>false</skip>
                            <doclint>none</doclint>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.7</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.7.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>